--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main-style.css">
-        <title>Webpage Name</title>
+        <title>One Piece</title>
     </head>
     <body>
+        <video autoplay muted loop id="bgvid" src="img/sunny.mp4"></video>
         <div class="header">
-            <h1>Header Logo</h1>
+            <h1><a href="index.html"><img src="img/logo.png" alt=""></a></h1>
             <div class="search-bar">
             <input type="text" name="Search" id="search-bar">
             </div>
@@ -18,41 +19,41 @@
         </div>
         <div class="header2">
             <div class="left-side">
-                <div class="title">This website is awesome</div>
-                <div class="title-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button>Sign up</button>
+                <div class="title">One Piece!</div>
+                <div class="title-description">is a Japanese manga series written and illustrated by Eiichiro Oda. It has been serialized in Shueisha's shōnen manga magazine Weekly Shōnen Jump since July 1997, with its individual chapters compiled into 104 tankōbon volumes as of November 2022. The story follows the adventures of Monkey D. Luffy, a boy whose body gained the properties of rubber after unintentionally eating a Devil Fruit. With his pirate crew, the Straw Hat Pirates, Luffy explores the Grand Line in search of the deceased King of the Pirates Gol D. Roger's ultimate treasure known as the "One Piece" in order to become the next King of the Pirates.</div>
+                <button>Be a Nakama</button>
             </div>
             <div class="right-side">
-                <img src="img/zoro.jpg">
+                <img src="img/main.jpg">
             </div>
         </div>
         <div class="mid">
             <div class="info">
-            <img src="img/zoro.jpg" alt="">
-            <p>this is some subtext under the illustration</p>
+            <a href="https://www.youtube.com/watch?v=UkV19XweiJs"><img src="img/badass.webp" alt=""></a>
+            <p>Top 10 Most Badass Moments in One Piece</p>
             </div>
             <div class="info">
-            <img src="img/zoro.jpg" alt="">
-            <p>this is some subtext under the illustration</p>
+            <a href="https://www.youtube.com/watch?v=dJZb47K_Whs"><img src="img/flexes.png" alt=""></a>
+            <p>Top 10 biggest flexes in one piece</p>
             </div>
             <div class="info">
-            <img src="img/zoro.jpg" alt="">
-            <p>this is some subtext under the illustration</p>
-             </div>
+            <a href="https://www.youtube.com/watch?v=rr4ZIqaK_dQ"><img src="img/yonko.png" alt=""></a>
+            <p>Strongest characters in the series</p>
+            </div>
             <div class="info">
-            <img src="img/zoro.jpg" alt="">
-            <p>this is some subtext under the illustration</p>
+            <a href="https://www.youtube.com/watch?v=qYzqDJBeI9Q"><img src="img/theory.webp" alt=""></a>
+            <p>Ohara's best one piece theory</p>
             </div>
         </div>
         <div class="quote">
-            <p class="display-quote">"My definition of discipline is doing what you hate to do, but do it like you love it. You have to feel comfortable being uncomfortable. I'm always comfortable being uncomfortable. And to be comfortable being uncomfortable, I have to hone my discipline, which to me is doing what I have to do, but also doing it like I love it."</p>
-            <p class="author"><strong>-Mike Tyson</strong></p>
+            <p class="display-quote">"Inherited Will, The Destiny Of Age, The Dreams Of Its People. As Long As People Continue To Pursue The Meaning Of Freedom, These Things Will Never Cease!"</p>
+            <p class="author"><strong>-Gol D. Roger</strong></p>
         </div>
         <div class="bottom-container">
             <div class="blue-box">
         <div class="call-to-action">
             <div class="action-top"> <strong>Call to action! It's time!</strong></div>
-            <div class="action-bottom">Sign up for our product by clicking that button right over there!</div>
+            <div class="action-bottom">Be a Nakama now and register on the button over there!</div>
             </div>
         <button>Sign up</button>
              </div>
@@ -60,6 +61,7 @@
         <div class="footer">
             Copyright © The Odin Project 2021
         </div>
+    
     </body>
 
 </html>
